bug-fix: on recipes, fixed whitespace issues and re-enabled pre-wrap on descritpions

--- a/recipee.pruim/src/app/pages/recipe/recipe.page.scss
+++ b/recipee.pruim/src/app/pages/recipe/recipe.page.scss
@@ -11,7 +11,7 @@
     color: var(--ion-color-light);
 }
 .description-text{
-    white-space: wrap;
+    white-space: pre-wrap;
     color: var(--ion-color-light);
 
 }
